--- a/client/src/app/nav-bar/nav-bar.component.html
+++ b/client/src/app/nav-bar/nav-bar.component.html
@@ -26,27 +26,27 @@
 
   <div class="container-fluid">
     <!-- <div class="row m-0 p-0"> -->
-
-    <div class="col-lg-8">
-      <form class="form-inline text-center">
-        <div
-          class="input-group collapse navbar-collapse"
-          id="navbarSupportedContent"
-        >
-          <a routerLink="/products">
-            <button
-              class="btn btn-outline-dark"
-              type="button"
-              id="button-addon2"
-            >
-              <i class="fa fa-search"></i>
-            </button>
-          </a>
-          <!-- <input type="text" class="form-control search_input" type="search" placeholder="Search" aria-label="Search Field" aria-describedby="button-addon2">
-               -->
-        </div>
-      </form>
-    </div>
+     <!-- button search  -->
+  <div class="col-lg-8">
+    <form class="form-inline text-center">
+      <div
+        class="input-group collapse navbar-collapse"
+        id="navbarSupportedContent"
+      >
+        <a routerLink="/allProduct">
+          <button
+            class="btn btn-outline-dark"
+            type="button"
+            id="button-addon2"
+          >
+            <i class="fa fa-search">🔍</i>
+          </button>
+        </a>
+        <!-- <input type="text" class="form-control search_input" type="search" placeholder="Search" aria-label="Search Field" aria-describedby="button-addon2"> -->
+            
+      </div>
+    </form>
+  </div>
 
     <!-- data-toggle="modal" data-target="#LoginModal" (click)="open()" -->
 
