--- a/client/src/app/signup/signup.component.html
+++ b/client/src/app/signup/signup.component.html
@@ -1,31 +1,56 @@
-<app-nav-bar></app-nav-bar>
-<form action="" id="login-form">
-  <h1>Create Account</h1>
-  <div class="input-box">
-    <input type="text" />
-    <span data-placeholder="Username"></span>
-  </div>
 
-  <div class="input-box">
-    <input type="password" />
-    <span data-placeholder="Password"></span>
-  </div>
-  <div class="input-box">
-    <input type="email" />
-    <span data-placeholder="email"></span>
-  </div>
-  <div class="input-box">
-    <input type="number" />
-    <span data-placeholder="Phone number"></span>
-  </div>
-  <div class="input-box">
-    <input type="tex" />
-    <span data-placeholder="Location"></span>
-  </div>
+<section class="vh-100 bg-image"
+  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-  <!-- <label> <input type="checkbox" name="remember" /> Remember me </label> -->
+              <form>
 
-  <button type="submit" class="login-btn">Sign up</button>
+                <div class="form-outline mb-4">
+                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example1cg">Full Name</label>
+                </div>
+                <div class="form-outline mb-4">
+                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example4cg">User Name</label>
+                </div>
 
-  <div class="bottom-links"></div>
-</form>
+                <div class="form-outline mb-4">
+                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example4cg">Password</label>
+                </div>
+                <div class="form-outline mb-4">
+                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                </div>
+                <div class="form-check d-flex justify-content-center mb-5">
+                  
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <button type="button"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">Have already an account?  <a  routerLink="/login"
+                    class="fw-bold text-body" ><u>Login here</u></a></p>
+
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
