--- a/client/src/app/modules/components/seeordres/one-ordre/one-ordre.component.css
+++ b/client/src/app/modules/components/seeordres/one-ordre/one-ordre.component.css
@@ -4,22 +4,26 @@
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     padding: 20px;
   }
+  .p {
+    margin-top: 2rem;
+    margin-right: 25rem;
+  }
   
   .widgetLgTitle {
     font-size: 22px;
     font-weight: 600;
   }
   
-  .widgetLgTable{
+  .widgetLgTable {
     width: 100%;
     border-spacing: 20px;
   }
   
-  .widgetLgTh{
+  .widgetLgTh {
     text-align: left;
   }
   
-  .widgetLgUser{
+  .widgetLgUser {
     display: flex;
     align-items: center;
     font-weight: 600;
@@ -33,7 +37,8 @@
     margin-right: 10px;
   }
   
-  .widgetLgDate,.widgetLgAmount{
+  .widgetLgDate,
+  .widgetLgAmount {
     font-weight: 300;
   }
   
@@ -43,18 +48,16 @@
     border-radius: 10px;
   }
   
-  .widgetLgButton.approved{
-      background-color: #e5faf2;
-      color: #3bb077;
+  .widgetLgButton.approved {
+    background-color: #e5faf2;
+    color: #3bb077;
   }
-  .widgetLgButton.declined{
-      background-color: #fff0f1;
-      color: #d95087;
-  
+  .widgetLgButton.declined {
+    background-color: #fff0f1;
+    color: #d95087;
   }
-  .widgetLgButton.pending{
-      background-color: #ebf1fe;
-      color: #2a7ade;
-  
+  .widgetLgButton.pending {
+    background-color: #ebf1fe;
+    color: #2a7ade;
   }
   
