--- a/client/src/app/my-profile/my-profile.component.css
+++ b/client/src/app/my-profile/my-profile.component.css
@@ -1,3 +1,8 @@
+.userUpdateButton {
+  width: 7rem;
+  transform: translate(-40rem,2.5rem);
+  background-color: black;
+}
 .user {
   flex: 4;
   padding: 20px;
