--- a/client/src/app/my-profile/my-profile.component.html
+++ b/client/src/app/my-profile/my-profile.component.html
@@ -1,101 +1,109 @@
 <app-nav-bar></app-nav-bar>
-<div class="user">
-  <div class="userTitleContainer">
-    <h1 class="userTitle">Edit User</h1>
-    <button class="userAddButton">Create</button>
-  </div>
-  <div class="userContainer">
-    <div class="userShow">
-      <div class="userShowTop">
-        <img
-          src="https://images.pexels.com/photos/1152994/pexels-photo-1152994.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-          alt=""
-          class="userShowImg"
-        />
-        <div class="userShowTopTitle">
-          <span class="userShowUsername">{{fullname}}</span>
-          
-        </div>
-      </div>
-      <div class="userShowBottom">
-        <span class="userShowTitle">Account Details</span>
-        <div class="userShowInfo">
-          <span class="userShowInfoTitle"
-            ><span class="blue"> Username </span>: {{ username }}</span
-          >
-        </div>
-        <div class="userShowInfo">
-          <span class="userShowInfoTitle"
-            ><span class="blue">email </span> : {{ email }}</span
-          >
-        </div>
-        <span class="userShowTitle">Contact Details</span>
-        <div class="userShowInfo">
-          <span class="userShowInfoTitle">
-            <span class="blue">phonenumber</span> : +216 {{ phonenumber }}</span
-          >
-        </div>
-        <div class="userShowInfo">
-          <span class="userShowInfoTitle"></span>
-        </div>
-        <div class="userShowInfo">
-          <span class="userShowInfoTitle"
-            ><span class="blue"> Adress </span> : {{ adress }}</span
-          >
-        </div>
-      </div>
+<form>
+  <div class="user">
+    <div class="userTitleContainer">
+      <h1 class="userTitle">Edit User</h1>
+      
     </div>
-    <div class="userUpdate">
-      <span class="userUpdateTitle">Edit</span>
-      <form class="userUpdateForm">
-        <div class="userUpdateLeft">
-          <div class="userUpdateItem">
-            <label>Username</label>
-            <input
-              type="text"
-              placeholder="{{ username }}"
-              class="userUpdateInput"
-            />
+    <div class="userContainer">
+      <div class="userShow">
+        <div class="userShowTop">
+          <img
+            src="https://images.pexels.com/photos/1152994/pexels-photo-1152994.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            alt=""
+            class="userShowImg"
+          />
+          <div class="userShowTopTitle">
+            <span class="userShowUsername">{{ fullname }}</span>
           </div>
+        </div>
+        <div class="userShowBottom">
+          <span class="userShowTitle">Account Details</span>
+          <div class="userShowInfo">
+            <span class="userShowInfoTitle"
+              ><span class="blue"> Username </span>: {{ USERname }}</span
+            >
+          </div>
+          <div class="userShowInfo">
+            <span class="userShowInfoTitle"
+              ><span class="blue">email </span> : {{ eMail }}</span
+            >
+          </div>
+          <span class="userShowTitle">Contact Details</span>
+          <div class="userShowInfo">
+            <span class="userShowInfoTitle">
+              <span class="blue">phonenumber</span> : +216
+              {{ phonenumberr }}</span
+            >
+          </div>
+          <div class="userShowInfo">
+            <span class="userShowInfoTitle"></span>
+          </div>
+          <div class="userShowInfo">
+            <span class="userShowInfoTitle"
+              ><span class="blue"> Adress </span> : {{ Adress }}</span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="userUpdate">
+        <span class="userUpdateTitle">Edit</span>
+        <form class="userUpdateForm" #inp="ngForm" (ngSubmit)="update(inp)">
+          <div class="userUpdateLeft">
+            <div class="userUpdateItem">
+              <label>Username</label>
+              <input
+                type="text"
+                placeholder="{{ USERname }}"
+                class="userUpdateInput"
+                #userName="ngModel"
+                [(ngModel)]="USERname"
+                name="userName"
+              />
+            </div>
 
-          <div class="userUpdateItem">
-            <label>Email</label>
-            <input
-              type="text"
-              placeholder="{{ email }}"
-              class="userUpdateInput"
-            />
+            <div class="userUpdateItem">
+              <label>Email</label>
+              <input
+                type="text"
+                placeholder="{{ eMail }}"
+                class="userUpdateInput"
+                #email="ngModel"
+                [(ngModel)]="eMail"
+                name="email"
+              />
+            </div>
+            <div class="userUpdateItem">
+              <label>Phone</label>
+              <input
+                type="text"
+                placeholder="+216 {{ phonenumberr }}"
+                class="userUpdateInput"
+                #phoneNumber="ngModel"
+                [(ngModel)]="phonenumberr"
+                name="phoneNumber"
+              />
+            </div>
+            <div class="userUpdateItem">
+              <label>Address</label>
+              <input
+                type="text"
+                required
+                placeholder="{{ Adress }}"
+                class="userUpdateInput"
+                #adress="ngModel"
+                [(ngModel)]="Adress"
+                name="adress"
+              />
+            </div>
+      
           </div>
-          <div class="userUpdateItem">
-            <label>Phone</label>
-            <input
-              type="text"
-              placeholder="+216 {{phonenumber}}"
-              class="userUpdateInput"
-            />
+          <div class="userUpdateRight">
+            <div class="userUpdateUpload"></div>
+            <button class="userUpdateButton" type="submit">Update</button>
           </div>
-          <div class="userUpdateItem">
-            <label>Address</label>
-            <input
-              type="text"
-              placeholder="New York | USA"
-              class="userUpdateInput"
-            />
-          </div>
-        </div>
-        <div class="userUpdateRight">
-          <div class="userUpdateUpload">
-            <img
-              class="userUpdateImg"
-              src="https://images.pexels.com/photos/1152994/pexels-photo-1152994.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-              alt=""
-            />
-            <label htmlFor="file"> </label>
-            <input type="file" id="file" display="none" />
-          </div>
-          <button class="userUpdateButton">Update</button>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+</form>
