shopping cart component initilite cart inside local storage when user login // onclick add a product object in local storge // get the products from local storage and render in shopping cart component // sing up component //

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -12,10 +12,7 @@
       required
       minlength="3"
     />
-    <!-- <div class="alert alert-danger">
-      <div>Email Required</div>
-      <div></div>
-    </div> -->
+
     <input
       type="password"
       class="form-control"
@@ -25,9 +22,7 @@
       placeholder="Password"
       required
     />
-    <!-- <div class="alert alert-danger">
-      <div>Password Required</div>
-    </div> -->
+
     <label class="checkbox">
       <input
         type="checkbox"
@@ -52,3 +47,4 @@
     <p>Don't have Account,Signup <a routerLink="/signup">Here</a></p>
   </form>
 </div>
+<app-footer></app-footer>
