--- a/client/src/app/modules/components/update-product/update-product.component.html
+++ b/client/src/app/modules/components/update-product/update-product.component.html
@@ -1,7 +1,7 @@
 <form action="" id="login-form">
   <h1>Update Product</h1>
 
-  <img width="467px" height="400px" [src]="imageUrl" alt="" />
+  <img width="467px" height="400px" [src]="object.imageUrl" alt="" />
 
   <div class="input-box">
     <input type="text" (keyup)="getProductName($event)" />
