--- a/client/src/app/all-products/all-products.component.html
+++ b/client/src/app/all-products/all-products.component.html
@@ -1,36 +1,40 @@
+<app-nav-bar></app-nav-bar>
 <div class="container mt-9">
   <div class="row">
     <div class="col">
       <h3>Our Products</h3>
       <p>
-        <input (keyup)="filterQ(query.value)" #query
-        type="text" class="form-control" placeholder="Search..." />
+        <input
+          (keyup)="filterQ(query.value)"
+          #query
+          type="text"
+          class="form-control"
+          placeholder="Search..."
+        />
       </p>
-      <br/>
+      <br />
       <div class="row">
         <div *ngFor="let item of filterd" class="card">
           <div class="imgBox">
-            <a> <img
-              src="{{ item.imageUrl }}"
-              alt="mouse corsair"
-              class="mouse"
+            <a>
+              <img src="{{ item.imageUrl }}" alt="mouse corsair" class="mouse"
             /></a>
           </div>
-          <br/>
-             <div class="contentBox" >
-          <h3> <a routerLink="/product/{{ item._id }}">{{
-                    item.productName
-                  }}</a>
-                </h3>
-                <p class="price">Price : {{ item.price }} TND</p>
-                <a class="buy">Add To Cart</a>
-                <div *ngIf="(item+1)%4===0" class="w-100" ><br></div>
-        </div>
+          <br />
+          <div class="contentBox">
+            <h3>
+              <a routerLink="/product/{{ item._id }}">{{ item.productName }}</a>
+            </h3>
+            <p class="price">Price : {{ item.price }} TND</p>
+            <a  class="buy">Add To Cart</a>
+            <div *ngIf="(item + 1) % 4 === 0" class="w-100"><br /></div>
           </div>
-          <div *ngIf="filterd.length == 0"> 
-              <p class="paragraph">Sorry, NO PRODUCTS FOUND!!</p> 
-           </div> 
+        </div>
+        <div *ngIf="filterd.length == 0">
+          <p class="paragraph">Sorry, NO PRODUCTS FOUND!!</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<app-footer></app-footer>
