--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,37 +1,20 @@
-<!-- Footer Section -->
-<div class="container-fluid footer pt-10">
-    
-    <div class="row p-5">
-      <div class="col-4">
-        <p class="lead"> ABOUT</p>
-        <p><a routerLink="/contactus">Contact Us</a></p>
-        <p ><a routerLink="/about">About Us</a></p>
-        <p ><a href="#">Press</a></p>
-
+<body>
+  <div class="footer-basic">
+    <footer>
+      <div class="social">
+        <a href="#"><i class="icon ion-social-instagram"></i></a
+        ><a href="#"><i class="icon ion-social-snapchat"></i></a
+        ><a href="#"><i class="icon ion-social-twitter"></i></a
+        ><a href="#"><i class="icon ion-social-facebook"></i></a>
       </div>
-      <div class="col-4">
-        <p class="lead">HELP</p>
-        <p ><a href="#">Payment</a></p>
-        <p ><a href="#">Shipping</a></p>
-        <p ><a href="#">Returns & Cancellation</a></p>
-      </div>
-      <div class="col-4">
-        <p class="lead">Registered Office Address</p>
-        <p > GoSHOP
-            Ahmedabad,
-            Gujarat - 560034
-            India</p>
-      </div>
-      <div class="row ">
-        <div class="col text-center">
-        <p>
-          <a href="#"><i class="fa fa-instagram"></i></a>&nbsp; 
-          <a href="#"><i class="fa fa-facebook-f"></i></a> &nbsp;
-          <a href="#"><i class="fa fa-twitter"></i></a>
-        </p>
-        <p>&copy;2018-19 GOSHOP</p>
-        </div>
-      </div>
-    </div>
-
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="#">Services</a></li>
+        <li class="list-inline-item"><a href="#">About</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+      </ul>
+      <p class="copyright">GoShop © 2022</p>
+    </footer>
   </div>
+</body>
