--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,3 +4,4 @@
 <app-about-us></app-about-us>
 <app-quality-description></app-quality-description>
 <app-products-exp></app-products-exp>
+<app-footer></app-footer>
