--- a/client/src/app/modules/components/add-product/add-product.component.css
+++ b/client/src/app/modules/components/add-product/add-product.component.css
@@ -12,7 +12,7 @@
 #login-form h1 {
     text-align: center;
     margin-bottom: 60px;
-    color: #00bcd4;
+    color: #070707;
     font-size: 30px;
 }
 #login-form p {
@@ -69,7 +69,7 @@
     width: 100%;
     height: 50px;
     border: none;
-    background: linear-gradient(70deg,#2196F3,#03bcd4,#2196F3);
+    background: linear-gradient(70deg,#0a0a0a,#6c7070,#d7dbde);
     background-size: 200%;
     color: #fff;
     outline: none;
@@ -94,4 +94,7 @@
 #login-form {
     width: 300px;
 }
+}
+h1{
+    text-shadow: 2px 2px
 }
