--- a/client/src/app/modules/components/footer-ad/footer-ad.component.html
+++ b/client/src/app/modules/components/footer-ad/footer-ad.component.html
@@ -1,4 +1,4 @@
-<!-- Footer Section -->
+<!-- Footer Section
 <div class="container-fluid footer pt-10">
     
     <div class="row p-5">
@@ -34,4 +34,19 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
+  <body>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a routerLink="/admin"><i class="icon ion-social-instagram"></i></a><a routerLink="/admin"><i class="icon ion-social-snapchat"></i></a><a routerLink="/admin"><i class="icon ion-social-twitter"></i></a><a routerLink="/admin"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">GoShop © 2022</p>
+        </footer>
+    </div>
+</body>
