--- a/client/src/app/modules/components/furniture-ad/furniture-ad.component.html
+++ b/client/src/app/modules/components/furniture-ad/furniture-ad.component.html
@@ -8,7 +8,7 @@
             </div>
   
             <div class="contentBox">
-              <h3>{{ item.productName }}</h3>
+              <a routerLink="/admin/product/{{ item._id }}"><h3>{{ item.productName }}</h3></a>
               <h2 class="price">{{ item.price }}</h2>
               <button
                 class="buy"
