--- a/client/src/app/modules/components/header/header.component.html
+++ b/client/src/app/modules/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light">
   <a class="navbar-brand" href="/home">
     <img
-      src="assets/img/go_shop.png"
+      src="https://cdn.onlinewebfonts.com/svg/img_407017.png"
       class="img-fluid"
       width="100"
       height="40"
@@ -76,18 +76,18 @@
         <div class="row last_row">
           <div class="col-sm-6 links">
             <a routerLink="/admin/mobiles"><h3>Mobiles</h3></a>
-            <li href="#">Apple-Samsung-</li>
+            <!-- <li href="#">Apple-Samsung-</li>
             <li href="#">Samsung</li>
             <li href="#">Mi</li>
-            <li href="#">Honor</li>
+            <li href="#">Honor</li> -->
           </div>
 
           <div class="col-sm-6 links">
             <a routerLink="/admin/computer"><h3>Computer</h3></a>
-            <a href="#">External Hard Disks</a>
+            <!-- <a href="#">External Hard Disks</a>
             <a href="#">Mouse</a>
             <a href="#">Laptop Bags</a>
-            <a href="#">Pendrives</a>
+            <a href="#">Pendrives</a> -->
           </div>
 
           <div class="col-sm-6 links">
@@ -125,29 +125,29 @@
         <div class="row last_row">
           <div class="col-sm-6 links">
             <a routerLink="/admin/furniture"> <h3>Furniture</h3></a>
-            <li href="#">Bedsheets</li>
+            <!-- <li href="#">Bedsheets</li>
             <li href="#">Curtains</li>
             <li href="#">Cushion & Pillow Covers</li>
-            <li href="#">Kitchen & Dining Linen</li>
+            <li href="#">Kitchen & Dining Linen</li> -->
           </div>
           <div class="col-sm-6 links">
             <a routerLink="/admin/homeAndDecor"><h3>Home Decor</h3></a>
-            <li href="#">Paintings</li>
+            <!-- <li href="#">Paintings</li>
             <li href="#">Clocks</li>
             <li href="#">Wall Shelves</li>
-            <li href="#">Wall Decals</li>
+            <li href="#">Wall Decals</li> -->
           </div>
 
           <div class="col-sm-6 links">
             <img
-              src="https://media.architecturaldigest.com/photos/5f46b2dde73e57ccfed67771/master/w_1600%2Cc_limit/shop_website_1-024_FINAL_w.jpg"
+              src="https://th.bing.com/th/id/OIP.WgeRReLgKKJdkk_q4NsbkAHaE3?pid=ImgDet&rs=1"
               alt="img cloth"
               class="img-fluid"
             />
           </div>
           <div class="col-sm-6 links">
             <img
-              src="https://trend-home.fr/fre_pl_Meubles-de-salon-table-basse-Juliette-et-meuble-TV-Romeo-blanc-mat-804_2.jpg"
+              src="https://th.bing.com/th/id/OIP.J4QoNBlsilTAw9oLSlF_6QAAAA?pid=ImgDet&rs=1"
               alt="img cloth"
               class="img-fluid"
             />
@@ -172,17 +172,17 @@
         <div class="row last_row">
           <div class="col-sm-6 links">
             <a routerLink="/admin/menWatches"><h3>Men Watches</h3></a>
-            <li href="#">MI</li>
+            <!-- <li href="#">MI</li>
             <li href="#">sony</li>
             <li href="#">LG</li>
-            <li href="#">Samsung</li>
+            <li href="#">Samsung</li> -->
           </div>
           <div class="col-sm-6 links">
             <a routerLink="/admin/womenWatches"><h3>Women Watches</h3></a>
-            <li href="#">Fully Automatic Front Load</li>
+            <!-- <li href="#">Fully Automatic Front Load</li>
             <li href="#">Semi Automatic Top Load</li>
             <li href="#">Fully Automatic Top Load</li>
-            <li href="#">Brands:-LG,IFB,Midea</li>
+            <li href="#">Brands:-LG,IFB,Midea</li> -->
           </div>
 
           <div class="col-sm-6 links">
@@ -204,7 +204,7 @@
     </div>
   </div>
   <div id="logout" class="dropdown1">
-    <button routerLink="/admin/allOrdres" class="dropbtn">
+    <button routerLink="/admin" class="dropbtn">
       See_Ordres
       <i class="fa fa-caret-down"></i>
     </button>
@@ -216,7 +216,7 @@
     </a>
   </div>
   <div class="dropdown1">
-    <button class="dropbtn">
+    <button class="dropbtn" (click)="this.auth.logout()">
       Logout
       <i class="fa fa-caret-down"></i>
     </button>
