--- a/client/src/app/modules/components/proddetails-ad/proddetails-ad.component.html
+++ b/client/src/app/modules/components/proddetails-ad/proddetails-ad.component.html
@@ -1,4 +1,3 @@
-<app-nav-bar></app-nav-bar>
 <body>
   <div class="container">
     <div class="imgBx">
@@ -11,9 +10,8 @@
           {{ oneProd.description }}
         </p>
         <h3>{{ oneProd.price }} TND</h3>
-        <button (click)="get(oneProd)">Add To Cart</button>
+        <button routerLink="/admin/updateProduct/{{ oneProd._id }}">edit</button> <br />
       </div>
     </div>
   </div>
 </body>
-<app-footer></app-footer>
