--- a/client/src/app/modules/components/seeordres/one-ordre/one-ordre.component.html
+++ b/client/src/app/modules/components/seeordres/one-ordre/one-ordre.component.html
@@ -3,13 +3,13 @@
     <div class="card" style="border-radius: 10px">
       <div class="card-header px-4 py-5">
         <h5 class="text-muted mb-0">
-          <span style="color: #a8729a">{{ user.fullName }}</span>
+          <span *ngIf="user" style="color: #a8729a">{{ user.fullName }}</span>
         </h5>
         <h5 class="text-muted mb-0">
-          <span style="color: #a8729a">{{ user.phoneNumber }}</span>
+          <span *ngIf="user" style="color: #a8729a">{{ user.phoneNumber }}</span>
         </h5>
         <h5 class="text-muted mb-0">
-          <span style="color: #a8729a">{{ user.adress }}</span>
+          <span *ngIf="user" style="color: #a8729a">{{ user.adress }}</span>
         </h5>
       </div>
       <div class="card-body p-4">
@@ -30,24 +30,13 @@
                 [prod]="item"
               ></app-quntity>
             </div>
+
             <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1" />
             <div class="row d-flex align-items-center">
-              <div class="col-md-10">
-                <div class="progress" style="height: 6px; border-radius: 16px">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    style="
-                      width: 65%;
-                      border-radius: 16px;
-                      background-color: #a8729a;
-                    "
-                    aria-valuenow="65"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
+              <button (click)="confirmOrdres()" class="btn">
+                confirm
+              </button>
+              <div class="col-md-10"></div>
             </div>
           </div>
         </div>
