--- a/client/src/app/modules/components/seeordres/one-product/one-product.component.html
+++ b/client/src/app/modules/components/seeordres/one-product/one-product.component.html
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-md-2">
-    <img [src]="product.imageUrl" class="img-fluid" alt="Phone" />
+    <img *ngIf="product" src="{{ product.imageUrl }}" class="img-fluid" alt="Phone" />
   </div>
   <div
     class="col-md-2 text-center d-flex justify-content-center align-items-center"
   >
-    <p class="text-muted mb-0">{{ product.productName }}</p>
+    <p *ngIf="product" class="text-muted mb-0">{{ product.productName }}</p>
   </div>
 
   <div
     class="col-md-2 text-center d-flex justify-content-center align-items-center"
   >
-    <p class="text-muted mb-0 small">{{ product.price }}</p>
+    <p *ngIf="product" class="text-muted mb-0 small">{{ product.price }} TDN</p>
   </div>
 </div>
