--- a/client/src/app/modules/components/update-product/update-product.component.css
+++ b/client/src/app/modules/components/update-product/update-product.component.css
@@ -12,7 +12,7 @@
 #login-form h1 {
     text-align: center;
     margin-bottom: 60px;
-    color: #00bcd4;
+    color: #080808;
     font-size: 30px;
 }
 #login-form p {
@@ -69,8 +69,8 @@
     width: 100%;
     height: 50px;
     border: none;
-    background: linear-gradient(70deg,#2196F3,#03bcd4,#2196F3);
     background-size: 200%;
+    background: linear-gradient(70deg,#302f2f,#6c7070,#d7dbde);
     color: #fff;
     outline: none;
     cursor: pointer;
@@ -94,4 +94,7 @@
 #login-form {
     width: 300px;
 }
+}
+h1{
+    text-shadow: 2px 2px
 }
