--- a/client/src/app/modules/components/women-w/women-w.component.css
+++ b/client/src/app/modules/components/women-w/women-w.component.css
@@ -13,6 +13,7 @@ body {
   min-height: 100vh;
   background: #20201f;
 }
+
 .row {
   width: 1450px;
   row-gap: 35px;
@@ -29,7 +30,7 @@ div {
   position: relative;
   width: 350px;
   height: 550px;
-  background: #01030a;
+  background: #333;
   border-radius: 20px;
   overflow: hidden;
  
