--- a/client/src/app/shopping-cart/shopping-cart.component.html
+++ b/client/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,57 @@
-<p>shopping-cart works!</p>
+<app-nav-bar></app-nav-bar>
+
+<div *ngIf="arrayProd.length" class="shopping-cart">
+  <div class="column-labels">
+    <label class="product-image">Image</label>
+    <label class="product-details">Product</label>
+    <label class="product-price">Price</label>
+    <label class="product-quantity">Quantity</label>
+    <label class="product-removal">Remove</label>
+  </div>
+
+  <div *ngFor="let item of arrayProd" class="product">
+    <div class="product-image">
+      <img [src]="item.imageUrl" />
+    </div>
+    <div class="product-details">
+      <div class="product-title">{{ item.productName }}</div>
+      <p class="product-description">
+        {{ item.description }}
+      </p>
+    </div>
+    <div class="product-price">{{ item.price }}</div>
+    <div class="product-quantity">
+      <input type="number" value="1" min="1" />
+    </div>
+    <div class="product-removal">
+      <button class="remove-product">Remove</button>
+    </div>
+  </div>
+
+  <!-- <div class="product">
+    <div class="product-image">
+      <img
+        src="https://s.cdpn.io/3/large-NutroNaturalChoiceAdultLambMealandRiceDryDogFood.png"
+      />
+    </div>
+    <div class="product-details">
+      <div class="product-title">Nutro™ Adult Lamb and Rice Dog Food</div>
+      <p class="product-description">
+        Who doesn't like lamb and rice? We've all hit the halal cart at 3am
+        while quasi-blackout after a night of binge drinking in Manhattan. Now
+        it's your dog's turn!
+      </p>
+    </div>
+    <div class="product-price">45.99</div>
+    <div class="product-quantity">
+      <input type="number" value="1" min="1" />
+    </div>
+    <div class="product-removal">
+      <button class="remove-product">Remove</button>
+    </div>
+    <div class="product-line-price">45.99</div>
+  </div> -->
+
+  <button (click)="postCart()" class="checkout">Checkout</button>
+</div>
+<app-footer></app-footer>
